--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,112 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/login_background"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context=".loginactivity.LoginActivity">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/logo" />
+    <data>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/nunito_bold"
-            android:text="@string/app_name"
-            android:textColor="@color/white"
-            android:textSize="30dp" />
-    </LinearLayout>
+        <variable
+            name="loginViewModel"
+            type="com.apptec.registrateapp.loginactivity.LoginViewModel" />
+    </data>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/border_corner"
+        android:layout_height="match_parent"
+        android:background="@drawable/login_background"
+        android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginTop="45dp"
-            android:layout_marginRight="35dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_light"
-                android:hint="Email"
-                android:inputType="textPersonName"
-                android:paddingBottom="20dp"
-                android:textSize="16dp"
-                tools:layout_editor_absoluteX="81dp"
-                tools:layout_editor_absoluteY="153dp" />
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/logo" />
 
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="fill_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_light"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:paddingBottom="20dp"
-                android:textSize="16dp"
-                tools:layout_editor_absoluteX="81dp"
-                tools:layout_editor_absoluteY="224dp" />
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                android:textSize="30dp" />
         </LinearLayout>
 
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:paddingTop="50dp">
+            android:layout_height="350dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/border_corner"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txtBienvenido"
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="45dp"
+                android:layout_marginRight="35dp"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_light"
+                    android:hint="Email"
+                    android:inputType="textPersonName"
+                    android:paddingBottom="20dp"
+                    android:textSize="16dp"
+                    tools:layout_editor_absoluteX="81dp"
+                    tools:layout_editor_absoluteY="153dp" />
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_light"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingBottom="20dp"
+                    android:textSize="16dp"
+                    tools:layout_editor_absoluteX="81dp"
+                    tools:layout_editor_absoluteY="224dp" />
+            </LinearLayout>
+
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_bold"
-                android:text="Bienvenido"
-                android:textColor="@color/black100"
-                android:textSize="30dp"
-                android:textStyle="bold" />
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
+                android:paddingTop="50dp">
 
-            <TextView
-                android:id="@+id/txtIniciarSesion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/txtBienvenido"
-                android:fontFamily="@font/opensans_light"
-                android:text="Iniciar sesión"
-                android:textColor="@color/black100"
-                android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/txtBienvenido"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text="Bienvenido"
+                    android:textColor="@color/black100"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
 
-            <ImageButton
-                android:id="@+id/loginButton"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/rigth_button"
-                android:src="@drawable/right_arrow"
-                android:text="Acceder" />
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/txtIniciarSesion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/txtBienvenido"
+                    android:fontFamily="@font/opensans_light"
+                    android:text="Iniciar sesión"
+                    android:textColor="@color/black100"
+                    android:textSize="20dp" />
 
-    </LinearLayout>
-</RelativeLayout>
+                <ImageButton
+                    android:id="@+id/loginButton"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/rigth_button"
+                    android:onClick="@{()->loginViewModel.loginClicked()}"
+                    android:src="@drawable/right_arrow"
+                    android:text="Acceder" />
+            </RelativeLayout>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+
+</layout>
+
