--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -1,27 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Fragment to show notifications -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<?xml version="1.0" encoding="utf-8"?><!-- Fragment to show notifications -->
+<layout>
 
-    <ListView
-        android:id="@+id/notification_list_view"
+    <data>
+
+        <variable
+            name="notificationViewModel"
+            type="com.apptec.registrateapp.mainactivity.fnotification.NotificationViewModel" />
+
+        <variable
+            name="mainViewModel"
+            type="com.apptec.registrateapp.mainactivity.MainViewModel" />
+
+
+    </data>
+
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="visible"/>
+        android:layout_height="match_parent">
 
-  <!--  <TextView
-        android:id="@+id/notification_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="No hay nuevas notificaciones"
-        android:visibility="visible"
-        ></TextView>-->
+        <ListView
+            android:id="@+id/notification_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/notification_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="No hay nuevas notificaciones"
+            android:visibility="gonevisible"></TextView>
+
+    </RelativeLayout>
+
+</layout>
