--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,99 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <!-- Main view model to know the status of the button -->
+        <variable
+            name="mainViewModel"
+            type="com.apptec.registrateapp.mainactivity.MainViewModel" />
+    </data>
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="220dp"
-        android:layout_height="220dp"
-        android:background="@drawable/light_blue_bg"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:weightSum="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+
 
         <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:background="@drawable/white_circle_bg"
+            android:id="@+id/linearLayout"
+            android:layout_width="220dp"
+            android:layout_height="220dp"
+            android:background="@drawable/light_blue_bg"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="10sp"
-            android:weightSum="2">
+            android:weightSum="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@drawable/top_half_circle"
-                android:gravity="bottom"
-                android:orientation="vertical">
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:background="@drawable/white_circle_bg"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="10sp"
+                android:weightSum="2">
 
-                <TextView
-                    android:id="@+id/fragment_home_button_message"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
-                    android:text="@string/home_text_view_start_message"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/black"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/nunito_bold"/>
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/top_half_circle"
+                    android:gravity="bottom"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/fragment_home_button_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="15dp"
+                        android:fontFamily="@font/nunito_bold"
+                        android:text="@string/home_text_view_start_message"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/black"
+                        android:textSize="25sp" />
 
 
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/fragment_home_start_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/bottom_half_circle"
+                    android:paddingBottom="20sp"
+                    android:text="@string/home_button_start_message"
+                    android:textAllCaps="false"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    tools:text="@string/home_button_start_message" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/fragment_home_start_button"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="@drawable/bottom_half_circle"
-                android:paddingBottom="20sp"
-                tools:text="@string/home_button_start_message"
-                android:text="@string/home_button_start_message"
-                android:textAllCaps="false"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
         </LinearLayout>
 
-    </LinearLayout>
-
-    <com.apptec.registrateapp.mainactivity.fhome.ui.CurveBgRelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="10dp"
-        android:background="#2a84fe"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.kizitonwose.calendarview.CalendarView
-            android:id="@+id/calendarView"
+        <com.apptec.registrateapp.mainactivity.fhome.ui.CurveBgRelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cv_dayViewResource="@layout/calendar_day_layout"
-            app:cv_hasBoundaries="true"
-            app:cv_inDateStyle="allMonths"
-            app:cv_maxRowCount="1"
-            app:cv_monthHeaderResource="@layout/calendar_month_layout"
-            app:cv_orientation="horizontal"
-            app:cv_outDateStyle="endOfRow"
-            app:cv_scrollMode="paged" />
+            android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
+            android:background="#2a84fe"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.kizitonwose.calendarview.CalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cv_dayViewResource="@layout/calendar_day_layout"
+                app:cv_hasBoundaries="true"
+                app:cv_inDateStyle="allMonths"
+                app:cv_maxRowCount="1"
+                app:cv_monthHeaderResource="@layout/calendar_month_layout"
+                app:cv_orientation="horizontal"
+                app:cv_outDateStyle="endOfRow"
+                app:cv_scrollMode="paged" />
 
 
-    </com.apptec.registrateapp.mainactivity.fhome.ui.CurveBgRelativeLayout>
+        </com.apptec.registrateapp.mainactivity.fhome.ui.CurveBgRelativeLayout>
 
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
