--- a/app/src/main/res/layout/dialog_base.xml
+++ b/app/src/main/res/layout/dialog_base.xml
@@ -32,25 +32,27 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dialog_base_title"
-            style="@style/TextAppearance.MaterialComponents.Headline4"
+            style="@style/TextAppearance.MaterialComponents.Headline5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            tools:text="Título"
+            tools:text="Title"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dialog_base_message"
-            android:layout_width="wrap_content"
-            style="@style/TextAppearance.MaterialComponents.Headline5"
+            style="@style/TextAppearance.MaterialComponents.Body1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            tools:text="Lorem ipsum inter aspdj aoe ndpasw aiosdo  qwpjk" />
+            app:layout_constraintTop_toBottomOf="@+id/dialog_base_title"
+            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
