--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:src="@drawable/icon"
+        android:src="@drawable/ic_launcher"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         tools:ignore="MissingConstraints" />
