--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -81,35 +81,35 @@
 
         </LinearLayout>
 
-        <com.apptec.camello.mainactivity.fhome.ui.CurveBgRelativeLayout
-            android:id="@+id/curveBgRelativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/colorPrimary"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="136dp"
             android:foregroundGravity="center_horizontal"
-            app:layout_constraintBottom_toBottomOf="@+id/curveBgRelativeLayout"
-            app:layout_constraintEnd_toEndOf="@+id/curveBgRelativeLayout"
-            app:layout_constraintStart_toStartOf="@+id/curveBgRelativeLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+            <com.apptec.camello.mainactivity.fhome.ui.CurveBgRelativeLayout
+                android:id="@+id/curveBgRelativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@color/colorPrimary"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView7"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="lun"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toStartOf="@+id/textView8"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -118,10 +118,10 @@
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView8"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="mar"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toStartOf="@+id/textView9"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView7"
@@ -129,10 +129,10 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView9"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="mié"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toStartOf="@+id/textView10"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -140,11 +140,11 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView10"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="jue"
+                android:textColor="@android:color/white"
                 app:layout_constraintBottom_toTopOf="@+id/thursday_number"
                 app:layout_constraintEnd_toStartOf="@+id/textView11"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -153,10 +153,10 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView11"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="vie"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toStartOf="@+id/textView12"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView10"
@@ -164,10 +164,10 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView12"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="sáb"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toStartOf="@+id/textView13"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView11"
@@ -176,10 +176,10 @@
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textView13"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="dom"
+                android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView12"
@@ -190,6 +190,7 @@
                 style="@style/TextAppearance.MaterialComponents.Body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toTopOf="@+id/textView10"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -202,17 +203,17 @@
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/monday_number"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:background="@drawable/circle_background"
-                android:gravity="center"
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circle_background"
+                android:backgroundTint="@{currentDay == 1 ? @color/white : @color/colorPrimary}"
+                android:gravity="center"
+                android:textColor="@{currentDay == 1 ? @color/colorPrimary : @color/white}"
                 app:layout_constraintEnd_toEndOf="@+id/textView7"
+
+
                 app:layout_constraintStart_toStartOf="@+id/textView7"
                 app:layout_constraintTop_toTopOf="@+id/thursday_number"
-
-
-                android:backgroundTint="@{currentDay == 1 ? @color/white : @color/colorPrimary}"
-                android:textColor="@{currentDay == 1 ? @color/colorPrimary : @color/white}"
 
                 tools:text="1" />
 
@@ -220,99 +221,97 @@
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tuesday_number"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:background="@drawable/circle_background"
-                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/circle_background"
+                android:backgroundTint="@{currentDay == 2 ? @color/white : @color/colorPrimary}"
+                android:gravity="center"
+                android:textColor="@{currentDay == 2 ? @color/colorPrimary : @color/white}"
                 app:layout_constraintEnd_toEndOf="@+id/textView8"
+
                 app:layout_constraintStart_toStartOf="@+id/textView8"
                 app:layout_constraintTop_toTopOf="@+id/thursday_number"
-
-                android:backgroundTint="@{currentDay == 2 ? @color/white : @color/colorPrimary}"
-                android:textColor="@{currentDay == 2 ? @color/colorPrimary : @color/white}"
 
                 tools:text="2" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/wednesday_number"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:background="@drawable/circle_background"
-                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/circle_background"
+                android:backgroundTint="@{currentDay == 3 ? @color/white : @color/colorPrimary}"
+                android:gravity="center"
+                android:textColor="@{currentDay == 3 ? @color/colorPrimary : @color/white}"
                 app:layout_constraintEnd_toEndOf="@+id/textView9"
+
                 app:layout_constraintStart_toStartOf="@+id/textView9"
                 app:layout_constraintTop_toTopOf="@+id/thursday_number"
-
-                android:backgroundTint="@{currentDay == 3 ? @color/white : @color/colorPrimary}"
-                android:textColor="@{currentDay == 3 ? @color/colorPrimary : @color/white}"
 
                 tools:text="3" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/thursday_number"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:background="@drawable/circle_background"
-                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/circle_background"
+                android:backgroundTint="@{currentDay == 4 ? @color/white : @color/colorPrimary}"
+                android:gravity="center"
+                android:textColor="@{currentDay == 4 ? @color/colorPrimary : @color/white}"
                 app:layout_constraintEnd_toEndOf="@+id/textView10"
+
                 app:layout_constraintStart_toStartOf="@+id/textView10"
                 app:layout_constraintTop_toBottomOf="@+id/textView10"
-
-                android:backgroundTint="@{currentDay == 4 ? @color/white : @color/colorPrimary}"
-                android:textColor="@{currentDay == 4 ? @color/colorPrimary : @color/white}"
 
                 tools:text="4" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/friday_number"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:background="@drawable/circle_background"
-                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/circle_background"
+                android:backgroundTint="@{currentDay == 5 ? @color/white : @color/colorPrimary}"
+                android:gravity="center"
+                android:textColor="@{currentDay == 5 ? @color/colorPrimary : @color/white}"
                 app:layout_constraintEnd_toEndOf="@+id/textView11"
+
                 app:layout_constraintStart_toStartOf="@+id/textView11"
                 app:layout_constraintTop_toTopOf="@+id/monday_number"
-
-                android:backgroundTint="@{currentDay == 5 ? @color/white : @color/colorPrimary}"
-                android:textColor="@{currentDay == 5 ? @color/colorPrimary : @color/white}"
 
                 tools:text="5" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/saturday_number"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:background="@drawable/circle_background"
-                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/circle_background"
+                android:backgroundTint="@{currentDay == 6 ? @color/white : @color/colorPrimary}"
+                android:gravity="center"
+                android:textColor="@{currentDay == 6 ? @color/colorPrimary : @color/white}"
                 app:layout_constraintEnd_toEndOf="@+id/textView12"
+
                 app:layout_constraintStart_toStartOf="@+id/textView12"
                 app:layout_constraintTop_toTopOf="@+id/thursday_number"
-
-                android:backgroundTint="@{currentDay == 6 ? @color/white : @color/colorPrimary}"
-                android:textColor="@{currentDay == 6 ? @color/colorPrimary : @color/white}"
 
                 tools:text="6" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/sunday_number"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:background="@drawable/circle_background"
-                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/circle_background"
+                android:backgroundTint="@{currentDay == 7 ? @color/white : @color/colorPrimary}"
+                android:gravity="center"
+                android:textColor="@{currentDay == 7 ? @color/colorPrimary : @color/white}"
                 app:layout_constraintEnd_toEndOf="@+id/textView13"
+
                 app:layout_constraintStart_toStartOf="@+id/textView13"
                 app:layout_constraintTop_toTopOf="@+id/thursday_number"
-
-                android:backgroundTint="@{currentDay == 7 ? @color/white : @color/colorPrimary}"
-                android:textColor="@{currentDay == 7 ? @color/colorPrimary : @color/white}"
 
                 tools:text="7" />
 
